
Series 6.x-x.x, 2010-08-03
--------------------------
by greenSkin: Admin can now edit the series description (term description) via 
  the series edit page.
by greenSkin: Renamed page title callback functions to reflect the view they go 
  with. Added series_nodes page title callback function that sets the page title 
  according to the series name.


Series 6.x-x.x, 2010-08-02
--------------------------
by greenSkin: Now hard-setting the view page 'series/%'.
by greenSkin: Added menu item to 'series' view page.
by greenSkin: Added default theme template file for series view.
by greenSkin: Updated views defaults: removed the page displays in favor of 
  hardcoding them within the module.
by greenSkin: Reverted comments in views-view-fields--series.tpl.php to the 
  original default comments.
by greenSkin: Added default theme template file for series_nodes view.
by greenSkin: Renamed view series to series_list so as not to conflict with the 
  series tag.
by greenSkin: Added nid field to series_nodes view and hid the title field. 
  Updated the default views.
by greenSkin: Fixed page 'series' to use series_list view. Added title callback 
  as well.
by greenSkin: Finished series block that lists other nodes in the active series.
by greenSkin: Added a weight of 1 to $node->content['series_navigation'] so it 
  falls below the node body which defaults to a weight of 0.


Series 6.x-x.x, 2010-07-29
--------------------------
by greenSkin: Set a default weight to nodes in a series when they are first 
  added to that series. Clean out the weight for a node in a series when it is 
  no longer tied to that series. Clear the caches for series a node was formerly 
  tied to and newly tied to.
by greenSkin: Instead of giving a default weight of 0 to nodes newly added to a 
  series, we give a weight that equals the count of nodes already in the series. 
  This ensures the node initially is added to the end of the series since 
  weights start at -10 (gives a buffer of 10).